# serializer version: 1
# name: test_base_image_override_is_announced
  dict({
    'exit_code': 0,
    'runner_calls': list([
      'fake-oci-runner build',
    ]),
    'stderr': '',
    'stdout': '''
      Resolved OCI_RUNNER to: <TMP>/bin/docker
      Base image redirected to mirror.example/python:3.12 by ASH_BASE_IMAGE_OVERRIDE.
      Building image automated-security-helper:non-root -- this may take a few minutes during the first build...
  
    ''',
  })
# ---
# name: test_failed_build_stops_before_the_run
  dict({
    'exit_code': 3,
    'runner_calls': list([
      'fake-oci-runner build',
    ]),
    'stderr': '''
      Error: building at STEP "RUN grype --version": exit status 127
      ERROR: failed to build image automated-security-helper:non-root (exit 3). See the build output above for the failing step.
  
    ''',
    'stdout': '''
      Resolved OCI_RUNNER to: <TMP>/bin/docker
      Building image automated-security-helper:non-root -- this may take a few minutes during the first build...
  
    ''',
  })
# ---
# name: test_malformed_base_oci_layout
  dict({
    'exit_code': 1,
    'runner_calls': list([
    ]),
    'stderr': '''
      ERROR: ASH_BASE_OCI_LAYOUT is '/layouts/base', which is not <layout dir>@sha256:<64 hex>. Unset it to build from the Dockerfile's own base image reference.
  
    ''',
    'stdout': '''
      Resolved OCI_RUNNER to: <TMP>/bin/docker
  
    ''',
  })
# ---
# name: test_no_runner_found
  dict({
    'exit_code': 1,
    'runner_calls': list([
    ]),
    'stderr': '',
    'stdout': '''
      Unable to resolve an OCI_RUNNER -- exiting
  
    ''',
  })
# ---
# name: test_run_status_is_the_wrapper_status[0]
  dict({
    'exit_code': 0,
    'runner_calls': list([
      'fake-oci-runner run',
    ]),
    'stderr': '',
    'stdout': '''
      Resolved OCI_RUNNER to: <TMP>/bin/docker
      Running ASH scan using built image...
      (container output)
  
    ''',
  })
# ---
# name: test_run_status_is_the_wrapper_status[125]
  dict({
    'exit_code': 125,
    'runner_calls': list([
      'fake-oci-runner run',
    ]),
    'stderr': '',
    'stdout': '''
      Resolved OCI_RUNNER to: <TMP>/bin/docker
      Running ASH scan using built image...
      (container output)
  
    ''',
  })
# ---
# name: test_run_status_is_the_wrapper_status[2]
  dict({
    'exit_code': 2,
    'runner_calls': list([
      'fake-oci-runner run',
    ]),
    'stderr': '',
    'stdout': '''
      Resolved OCI_RUNNER to: <TMP>/bin/docker
      Running ASH scan using built image...
      (container output)
  
    ''',
  })
# ---
